<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_color"
        android:name="com.table.tableapp.ui.colors.ColorFragment"
        android:label="@string/menu_color"
        tools:layout="@layout/fragment_color" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.table.tableapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_preset"
        android:name="com.table.tableapp.ui.presets.PresetsFragment"
        android:label="@string/menu_preset"
        tools:layout="@layout/fragment_preset" />

    <fragment
        android:id="@+id/nav_speed"
        android:name="com.table.tableapp.ui.speed.SpeedFragment"
        android:label="@string/menu_speed"
        tools:layout="@layout/fragment_speed" />
</navigation>