<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.speed.SpeedFragment">

    <TextView
        android:id="@+id/text_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/slider_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="0dp"
        android:paddingTop="0dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/fps_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fps_slider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="-100dp"
            android:text="@string/fps"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/fps_slider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="bottom"
            android:layout_marginTop="100dp"
            android:max="49"
            android:progress="49"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/speed_slider" />

        <TextView
            android:id="@+id/speed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/speed_slider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/speed"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/speed_slider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/fps_slider"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/inner_slider_distance"
            android:max="4000"
            android:progress="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/freq_slider" />

        <TextView
            android:id="@+id/fade_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/fade_slider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/fade"
            android:textAlignment="center" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/fade_slider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/speed_slider"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/inner_slider_distance"
            android:max="255"
            android:progress="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/freq_slider" />

        <TextView
            android:id="@+id/freq_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/freq_slider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/freq"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/freq_slider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/fade_slider"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/inner_slider_distance"
            android:max="255"
            android:progress="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/delta_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/delta_slider"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="-25dp"
            android:text="@string/delta"
            android:textAlignment="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/delta_slider"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/freq_slider"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/inner_slider_distance"
            android:max="10"
            android:progress="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>